@@ -76,11 +76,18 @@ from bzrlib import (
 
 
 class addinfourl(urllib2.addinfourl):
+    '''Replacement addinfourl class compatible with python-2.7's xmlrpclib
+
+    In python-2.7, xmlrpclib expects that the response object that it receives
+    has a getheader method.  httplib.HTTPResponse provides this but
+    urllib2.addinfourl does not.  Add the necessary functions here, ported to
+    use the internal data structures of addinfourl.
+    '''
 
     def getheader(self, name, default=None):
         if self.headers is None:
             raise httplib.ResponseNotReady()
-        return self.headers/getheader(name, default)
+        return self.headers.getheader(name, default)
 
     def getheaders(self):
         if self.headers is None:
